--- a/server-app/src/main/resources/application.yaml
+++ b/server-app/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/project_review
+    url: jdbc:postgresql://81.163.28.113:5432/postgres
     username: postgres
     password: qwerty
     driver-class-name: org.postgresql.Driver
