--- a/server-app/pom.xml
+++ b/server-app/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>io.github.LyutovaAnastasia</groupId>
         <artifactId>server</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>00.001.00-SNAPSHOT</version>
     </parent>
 
     <artifactId>server-app</artifactId>
     <packaging>jar</packaging>
 
     <properties>
-        <start-class>com.company.Application</start-class>
+        <start-class>com.company.ServerApplication</start-class>
     </properties>
 
     <dependencies>
@@ -24,6 +24,33 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jeasy</groupId>
+            <artifactId>easy-random-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+        </dependency>
+
 <!--        <dependency>-->
 <!--            <groupId>org.zalando</groupId>-->
 <!--            <artifactId>logbook-spring-boot-starter</artifactId>-->
