--- a/server-app-db/src/main/resources/liquibase.properties
+++ b/server-app-db/src/main/resources/liquibase.properties
@@ -1,4 +1,4 @@
 # local
-url=jdbc:postgresql://localhost:5432/project_review?currentSchema=server
+url=jdbc:postgresql://81.163.28.113:5432/postgres?currentSchema=server
 username=postgres
 password=qwerty
