--- a/server-app/pom.xml
+++ b/server-app/pom.xml
@@ -54,6 +54,11 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>4.8.0</version>
+        </dependency>
 
 
 <!--        <dependency>-->
@@ -101,6 +106,16 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <mainClass>${start-class}</mainClass>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>4.4.3</version>
+                <configuration>
+                    <skip>false</skip>
+                    <propertyFile>src/main/resources/application.yaml</propertyFile>
+                    <changeLogFile>src/main/resources/liquibase/changelog.yaml</changeLogFile>
                 </configuration>
             </plugin>
         </plugins>
