--- a/server-app-db/src/main/resources/liquibase/00/001.00/changes.yaml
+++ b/server-app-db/src/main/resources/liquibase/00/001.00/changes.yaml
@@ -10,6 +10,9 @@ databaseChangeLog:
       file: ddl/categories.yaml
       relativeToChangelogFile: true
   - include:
+      file: ddl/images_company.yaml
+      relativeToChangelogFile: true
+  - include:
       file: ddl/academies.yaml
       relativeToChangelogFile: true
   - include:
@@ -24,6 +27,9 @@ databaseChangeLog:
       relativeToChangelogFile: true
   - include:
       file: dml/fill_categories.yaml
+      relativeToChangelogFile: true
+  - include:
+      file: dml/fill_images_company.yaml
       relativeToChangelogFile: true
   - include:
       file: dml/fill_academies.yaml
