--- a/server-app/src/main/resources/application.yaml
+++ b/server-app/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-#    url: jdbc:postgresql://postgresdb:5432/postgres
+#    url: jdbc:postgresql://postgresdb:5432/postgres?currentSchema=server
     url: jdbc:postgresql://localhost:5432/postgres?currentSchema=server
 #    url: jdbc:postgresql://81.163.28.113:5432/postgres?currentSchema=server
     username: postgres
@@ -11,22 +11,22 @@ spring:
     enabled: false
     change-log: classpath:liquibase/changelog.yaml
 
-#  jpa:
-#    properties:
-#      hibernate:
-#        show_sql: true
-#        format_sql: true
-#
+  jpa:
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
 
-#logging:
-#  level:
-#    org:
-#      hibernate:
-#        SQL:
-#          DEBUG
-#        type:
-#          descriptor:
-#            sql:
-#              BasicBinder:
-#                TRACE
+
+logging:
+  level:
+    org:
+      hibernate:
+        SQL:
+          DEBUG
+        type:
+          descriptor:
+            sql:
+              BasicBinder:
+                TRACE
 
