Review без DTO, ClassDTO, ClassDtoHeader, ClassProjection, ClassController

--- a/server-app-db/src/main/resources/liquibase/00/001.00/changes.yaml
+++ b/server-app-db/src/main/resources/liquibase/00/001.00/changes.yaml
@@ -21,6 +21,9 @@ databaseChangeLog:
   - include:
       file: ddl/classes.yaml
       relativeToChangelogFile: true
+  - include:
+      file: ddl/reviews.yaml
+      relativeToChangelogFile: true
 
   - include:
       file: dml/fill_sections.yaml
@@ -39,5 +42,8 @@ databaseChangeLog:
       relativeToChangelogFile: true
   - include:
       file: dml/fill_classes.yaml
+      relativeToChangelogFile: true
+  - include:
+      file: dml/fill_reviews.yaml
       relativeToChangelogFile: true
 
