--- a/server-app/src/main/resources/application.yaml
+++ b/server-app/src/main/resources/application.yaml
@@ -11,22 +11,22 @@ spring:
     enabled: false
     change-log: classpath:liquibase/changelog.yaml
 
-  jpa:
-    properties:
-      hibernate:
-        show_sql: true
-        format_sql: true
+#  jpa:
+#    properties:
+#      hibernate:
+#        show_sql: true
+#        format_sql: true
 
 
-logging:
-  level:
-    org:
-      hibernate:
-        SQL:
-          DEBUG
-        type:
-          descriptor:
-            sql:
-              BasicBinder:
-                TRACE
+#logging:
+#  level:
+#    org:
+#      hibernate:
+#        SQL:
+#          DEBUG
+#        type:
+#          descriptor:
+#            sql:
+#              BasicBinder:
+#                TRACE
 
