--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.5.7</version>
+    <version>2.6.6</version>
   </parent>
 
   <groupId>io.github.LyutovaAnastasia</groupId>
@@ -21,12 +21,15 @@
 
 
   <properties>
-    <java.version>11</java.version>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>${java.version}</maven.compiler.source>
-    <maven.compiler.target>${java.version}</maven.compiler.target>
-    <revision>${project.version}</revision>
-    <postgresql.version>42.3.1</postgresql.version>
+      <java.version>11</java.version>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <maven.compiler.source>${java.version}</maven.compiler.source>
+      <maven.compiler.target>${java.version}</maven.compiler.target>
+      <revision>${project.version}</revision>
+      <postgresql.version>42.3.1</postgresql.version>
+      <problem.version>0.23.0</problem.version>
+      <logstash-logback.version>7.1</logstash-logback.version>
+      <spring-cloud.version>2021.0.1</spring-cloud.version>
   </properties>
 
   <modules>
@@ -36,30 +39,51 @@
 
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>org.modelmapper</groupId>
-        <artifactId>modelmapper</artifactId>
-        <version>2.4.2</version>
-      </dependency>
-      <dependency>
-        <groupId>org.postgresql</groupId>
-        <artifactId>postgresql</artifactId>
-        <version>${postgresql.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jeasy</groupId>
-        <artifactId>easy-random-core</artifactId>
-        <version>5.0.0</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.springdoc</groupId>
-        <artifactId>springdoc-openapi-ui</artifactId>
-        <version>1.5.12</version>
-      </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.4.2</version>
+          </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
+          </dependency>
+        <dependency>
+            <groupId>org.jeasy</groupId>
+            <artifactId>easy-random-core</artifactId>
+            <version>5.0.0</version>
+            <scope>test</scope>
+          </dependency>
+        <dependency>
+          <groupId>org.springdoc</groupId>
+          <artifactId>springdoc-openapi-ui</artifactId>
+          <version>1.5.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openapitools</groupId>
+            <artifactId>jackson-databind-nullable</artifactId>
+            <version>0.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.zalando</groupId>
+            <artifactId>problem-spring-web</artifactId>
+            <version>${problem.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>${logstash-logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-dependencies</artifactId>
+            <version>${spring-cloud.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
     </dependencies>
   </dependencyManagement>
-
 
   <dependencies>
     <dependency>
@@ -68,82 +92,15 @@
       <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
-
-<!--    <dependency>-->
-<!--      <groupId>org.springframework.boot</groupId>-->
-<!--      <artifactId>spring-boot-starter-data-jpa</artifactId>-->
-<!--    </dependency>-->
-
-
-<!--    <dependency>-->
-<!--      <groupId>javax.persistence</groupId>-->
-<!--      <artifactId>javax.persistence-api</artifactId>-->
-<!--      <version>2.2</version>-->
-<!--    </dependency>-->
-
-<!--    <dependency>-->
-<!--      <groupId>org.springframework</groupId>-->
-<!--      <artifactId>spring-jdbc</artifactId>-->
-<!--      <version>5.3.13</version>-->
-<!--    </dependency>-->
-
-
-<!--    <dependency>-->
-<!--      <groupId>org.springframework</groupId>-->
-<!--      <artifactId>spring-core</artifactId>-->
-<!--      <version>5.3.13</version>-->
-<!--    </dependency>-->
-
-<!--    <dependency>-->
-<!--      <groupId>org.springframework</groupId>-->
-<!--      <artifactId>spring-context</artifactId>-->
-<!--      <version>5.3.13</version>-->
-<!--    </dependency>-->
-
-<!--    <dependency>-->
-<!--      <groupId>javax.annotation</groupId>-->
-<!--      <artifactId>javax.annotation-api</artifactId>-->
-<!--      <version>1.3.2</version>-->
-<!--    </dependency>-->
-
-<!--    <dependency>-->
-<!--      <groupId>org.springframework</groupId>-->
-<!--      <artifactId>spring-beans</artifactId>-->
-<!--      <version>5.3.13</version>-->
-<!--    </dependency>-->
-
-<!--    <dependency>-->
-<!--      <groupId>org.hibernate</groupId>-->
-<!--      <artifactId>hibernate-core</artifactId>-->
-<!--      <version>5.6.1.Final</version>-->
-<!--    </dependency>-->
-
-<!--    <dependency>-->
-<!--      <groupId>org.springframework.boot</groupId>-->
-<!--      <artifactId>spring-boot-starter-web</artifactId>-->
-<!--    </dependency>-->
-
-<!--    <dependency>-->
-<!--      <groupId>io.swagger.core.v3</groupId>-->
-<!--      <artifactId>swagger-annotations</artifactId>-->
-<!--      <version>2.1.11</version>-->
-<!--    </dependency>-->
-<!--    <dependency>-->
-<!--      <groupId>org.springdoc</groupId>-->
-<!--      <artifactId>springdoc-openapi-ui</artifactId>-->
-<!--      <version>1.5.12</version>-->
-<!--    </dependency>-->
   </dependencies>
 
   <build>
-<!--    <finalName>ServerApp</finalName>-->
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+    <pluginManagement>
       <plugins>
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.1.0</version>
         </plugin>
-        <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
           <version>3.0.2</version>
@@ -176,32 +133,52 @@
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
         </plugin>
-        <plugin>
-          <groupId>org.springdoc</groupId>
-          <artifactId>springdoc-openapi-maven-plugin</artifactId>
-          <version>0.3</version>
-          <executions>
-            <execution>
-              <phase>integration-test</phase>
-              <goals>
-                <goal>generate</goal>
-              </goals>
-            </execution>
-          </executions>
-          <configuration>
-            <apiDocsUrl>http://localhost:8080/v3/api-docs</apiDocsUrl>
-            <outputFileName>openapi.yaml</outputFileName>
-            <outputDir>src/main/java</outputDir>
-          </configuration>
-        </plugin>
-<!--        <dependencies>-->
-<!--          <dependency>-->
-<!--            <groupId>org.postgresql</groupId>-->
-<!--            <artifactId>postgresql</artifactId>-->
-<!--            <version>${postgresql.version}</version>-->
-<!--          </dependency>-->
-<!--        </dependencies>-->
-        <plugin>
+<!--        <plugin>-->
+<!--          <groupId>org.springdoc</groupId>-->
+<!--          <artifactId>springdoc-openapi-maven-plugin</artifactId>-->
+<!--          <version>5.4.0</version>-->
+<!--          <executions>-->
+<!--            <execution>-->
+<!--              <phase>integration-test</phase>;-->
+<!--              <goals>-->
+<!--                <goal>generate</goal>-->
+<!--              </goals>-->
+<!--            </execution>-->
+<!--          </executions>-->
+<!--          <configuration>-->
+<!--              <inputSpec>${project.basedir}/openapi.yml</inputSpec>-->
+<!--            <apiDocsUrl>http://localhost:8080/v3/api-docs</apiDocsUrl>-->
+<!--            <outputFileName>openapi.yaml</outputFileName>-->
+<!--            <outputDir>src/main/java</outputDir>-->
+<!--          </configuration>-->
+<!--        </plugin>-->
+          <plugin>
+              <groupId>org.openapitools</groupId>
+              <artifactId>openapi-generator-maven-plugin</artifactId>
+              <version>5.4.0</version>
+              <executions>
+                  <execution>
+                      <goals>
+                          <goal>generate</goal>
+                      </goals>
+                      <configuration>
+                          <inputSpec>
+                              ${project.basedir}/server-app/src/main/resources/static/openapi.yml
+                          </inputSpec>
+                          <generatorName>java</generatorName>
+                          <configHelp>true</configHelp>
+<!--                          <packageName>com.company</packageName>-->
+<!--                          <apiPackage>com.company.rest</apiPackage>-->
+<!--                          <modelPackage>com.company.domain.model</modelPackage>-->
+                          <configOptions>
+                              <delegatePattern>true</delegatePattern>
+                              <interfaceOnly>true</interfaceOnly>
+                          </configOptions>
+                      </configuration>
+                  </execution>
+              </executions>
+          </plugin>
+          <plugin>
           <groupId>org.liquibase</groupId>
           <artifactId>liquibase-maven-plugin</artifactId>
           <version>4.4.3</version>
