--- a/server-app-db/src/main/resources/liquibase/00/001.00/dml/fill_reviews.yaml
+++ b/server-app-db/src/main/resources/liquibase/00/001.00/dml/fill_reviews.yaml
@@ -17,8 +17,8 @@ databaseChangeLog:
 
         - sql:
             sql:
-              insert into server.reviews (id, begin_date, end_date, minuses, pluses, comment, mentor, employed, date, mark, class_id) values (1, '2022-02-11', '2022-03-19', 'minuses', 'pluses', 'comment', true, false, '2022-03-19', 5, 1);
-              insert into server.reviews (id, begin_date, end_date, minuses, pluses, comment, mentor, employed, date, mark, class_id) values (2, '2022-02-11', '2022-03-19', 'minuses', 'pluses', 'comment', false, true, '2022-03-19', 3, 1);
+              insert into server.reviews (id, begin_date, end_date, minuses, pluses, comment, mentor, employed, date, mark, active, class_id, user_id) values (1, '2022-02-11', '2022-03-19', 'minuses', 'pluses', 'comment', true, false, '2022-03-19', 5, false, 1, 1);
+              insert into server.reviews (id, begin_date, end_date, minuses, pluses, comment, mentor, employed, date, mark, active, class_id, user_id) values (2, '2022-02-11', '2022-03-19', 'minuses', 'pluses', 'comment', false, true, '2022-03-19', 3, false, 1, 1);
             endDelimiter: ;
 
         - rollback:
