--- a/server-app/src/main/resources/application.yaml
+++ b/server-app/src/main/resources/application.yaml
@@ -2,8 +2,8 @@ spring:
   application:
     name: server
   datasource:
-#    url: jdbc:postgresql://postgresdb:5432/postgres?currentSchema=server
-    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=server
+    url: jdbc:postgresql://postgresdb:5432/postgres?currentSchema=server
+    #url: jdbc:postgresql://localhost:5432/postgres?currentSchema=server
     username: postgres
     password: qwerty
     driver-class-name: org.postgresql.Driver
@@ -11,7 +11,7 @@ spring:
 springdoc:
   swagger-ui:
     path: /
-    url: /openapi.yml
+#    url: /openapi.yaml
 #    use-root-path: true
 #    url: /v3/api-docs
 #    config-url: /v3/api-docs/swagger-config
